tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NEIisEVENMOREPOW-pl7uw8oSRhe6L4DmTRfrOQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14560777611133840185,
  "prerequisites": [
    1506
  ],
  "properties": {
    "auto_claim": false,
    "desc": "NEI now automatically collapses similar items into one slot making browsing much faster! To collapse/uncollapse a group use ALT+LMB.\nYou can also create your own presets with custom groups!\n\n[note]You can disable this functionality in NEI settings[/note]\n\nAlso now NEI has JEI-like Advanced Search:\n\n@ - search by mod (@minecraft)\n\n[note]There are even more special characters that you can use but most of them are off by default (e.g. no need to use # to search in tooltip), below are all the special characters, check which ones are on/off in NEI settings.\n\nSpace is used as a logical AND between different conditions\n# - search by tooltip (#UV-Tier)\n& - search by id: (&95:15 extratrees:door)\n$ - search by ore dictionary ($ore)\n% - search by subsets (%block)\n| - logical or. multi-item search (wrench|hammer)\n- - logical not. exclude items that match the following expression (-@minecraft)\n\" - multiple words wrapped in quotes are treated as one condition rather than several (\"White Stained Glass\")\n\nSearch Mode (apply on search parts, not full string):\nPlain - simple string\nExtended - allow only ?, * rules (by default)\nRegex - allow full regex\n\nIn Extended Search Mode:\n? - any character (@min?craft)\n* - any few characters (@m*ft = @minecraft)\nr/.../ - standard java regex (@r/m\\w{6}ft/ = @minecraft)[/note]\n\n[note]You can disable this functionality in NEI settings.[/note]\n\nYou can add bookmarks with the A key while hovering over an item, also:\nHold SHIFT to bookmark the whole recipe\nHold CTRL to bookmark number of items\nHold SHIFT + CTRL to bookmark both recipe and all the number of all the items it contains",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lNEI is EVEN MORE POWERFUL NOW?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1506
  ],
  "rewards": [],
  "tasks": []
}
