tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NanoForgeTier2-AAAAAAAAAAAAAAAAAAAM0A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3280,
  "prerequisites": [
    458,
    3279
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Carbon Nanites are good first workers, but they don't have much in the way of working with more complex systems as they have a very basic nanite network. So a new more advanced nanite will be needed to produce complex nanites.\n\nThe neutronium nanite is an in-between of the two tiers able to produce tier 2 nanites, which have other uses.\n\n[note]When putting the neutronium nanite in the controller, you will need to wait for the structure check to happen again or break and replace the controller with a neutronium nanite inside. Allows the Nano Forge to make tier 2 nanites.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nano Forge Tier 2",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    458,
    3279
  ],
  "rewards": [],
  "tasks": []
}
