tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NanoForgeTier3-AAAAAAAAAAAAAAAAAAAM0Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3281,
  "prerequisites": [
    3280,
    15490774631735871952
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Neutronium nanites are slow moving, but that allowed them to have a complex nanite network. If there was a material that could move itself it could allow for an even more complex nanite with great speeds... Thankfully with the DTPF fully functional we can make it, transcendent metal.\n\n[note]Same thing as the neutronium nanite, but this nanite allows for tier 3 nanites to be made in the nano forge.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nano Forge Tier 3",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3280,
    15490774631735871952
  ],
  "rewards": [],
  "tasks": []
}
