tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NeverHungryAgain-hvukogcPRX-hht60vc0Zgw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 508701697863653763,
  "prerequisites": [
    2628
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Congratulations! You have gracefully served your penance; no longer shall you be bound by the woes of hunger. \n\nWith this new trinket (equipable in a baubles slot) you will automatically have your hunger and saturation replenished, so long as the nanobooster stays charged.\n\nAdditionally it will do it's best to keep you healed, though it cannot ward off death completely on its own.\n\n[note]P.S. Upgrading your wireless charger might be a good idea![/note]",
    "global_share": true,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Never Hungry Again",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2628
  ],
  "rewards": [],
  "tasks": []
}
