tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NoBoomTomorrow-AAAAAAAAAAAAAAAAAAAHbg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1902,
  "prerequisites": [
    190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With a nuke, you can cause some real catastrophic damage to your base. You can either place it 20 chunks away, or surround it with blast proof materials.\n\nFused Quartz is no good now, forget about it OK? Instead, use the GTNH approved Plated Reinforced Stone series! Or one of the other options I guess, like Warded Glass. You may need multiple layers depending on your reactor, try it out in creative. Remember you must close in the corners - blasts can slip through the cracks. To get power out, do right angle turns on the wires as blasts go in a straight line.\n\n[note]There are 6 of them, use NEI.[/note]\n\n[note]Okay, okay, you don't have to forget Fused Quartz, I'll give you some. Maybe you can stop rain with it.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lNo Boom Tomorrow",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    190
  ],
  "rewards": [],
  "tasks": []
}
