tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NobodyWantsanExp-AAAAAAAAAAAAAAAAAAAF3w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1503,
  "prerequisites": [
    13
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...right? So when building multiblocks, make sure you keep in mind that electric machines don't like getting rain or snow on them. They'll start fires, and those fires have a chance of causing an explosion. This explosion will explode other machines, cascading until your whole base is a hole in the ground. This is one of the reason backups are a thing. Stay safe out there!\n\nIf worse comes to worst, there is logs/Explosion.log that tracks what caused an explosion. However, this file appears to reset on world load.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lNobody Wants an Explosion...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13
  ],
  "rewards": [],
  "tasks": []
}
