tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NotEnoughItemsNo-AAAAAAAAAAAAAAAAAAAF4Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1505,
  "prerequisites": [
    15
  ],
  "properties": {
    "auto_claim": false,
    "desc": "More like too many items! Here are some tips for using NEI.\n\nWhen you have your inventory open, you can type the search terms in the text bar at the bottom. Make sure your GUI size is set correctly, or you won't be able to see it. Double-click the bar to highlight any matching items in your inventory or inventories you're looking at. Handy for searching for a specific ore, as they tend to look the same!\n\nEven better, you can use T to search nearby inventories, which will emit some particles.\n\nWe have also provided the special Y command to look for a machine in the world, in case you've forgotten where you placed that Advanced Circuit Assembler.\n\nWe now have an extra-fancy Bookmark feature! The default key is A, but can be changed in the NEI config window. Bookmarks will be on the left side of the inventory, and you can look up their recipes or uses as normal. To move a bookmark, drag it with Shift+LMB. You can even bookmark entire recipes with Shift+A or recipes with amounts using Ctrl+Shift+A.\n\nPressing O will hide NEI, useful for fancy screenshots.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lNot Enough Items - Now with Bookmarks and Recent History!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15
  ],
  "rewards": [],
  "tasks": []
}
