tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NumbersintheCorn-AAAAAAAAAAAAAAAAAAAJZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2406,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What's with the numbers in the corner? That is the In-Game Info (IGI) mod. Some of the info it gives is useful right away, some of it shines later on in progression.\n\nFor now, the most important thing it does is showing if you are in an ore chunk. Further quests will explain what it means.\n\nIf you want to hide it, type \"/igi disable\" in the chat. Type \"/igi enable\" if you want to turn it back on.\n\nThe command \"/igi config\" opens the configuration window to control its position, scale, and size.\n\nThe command \"/xu_tps\" from the mod Extra Utilities toggles numbers to measure ticktime in milliseconds and the TPS (Ticks Per Second). TPS is a measure of how well your server is running. The ideal TPS is 20.00 (meaning a ticktime of at most 50.00). If your TPS is less than 15, things are going to start lagging noticeably. At 10 or less TPS, it is going to be hard to play.\nThe tooltip shows three types of measurement: instantaneous, average, and worst-case. Each one first shows the ticktime and then the TPS in brackets.\n\nIf you need suggestions on solving TPS problems, feel free to ask for help in the GTNH Discord.\n\nWhile GTNH comes with recommended default settings, in particular when it comes to balance, there are many commands and configurations to customize your experience. They range from accessibility or debug tools to visual customization all the way to various cheats. You can find a small overview on [url]https://wiki.gtnewhorizons.com/wiki/Commands_and_Configurations[/url].",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lNumbers in the Corner?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
